added TagContainer.xaml and refactored accordingly

--- a/Hitomi-Scroll-Viewer/Hitomi-Scroll-Viewer.csproj
+++ b/Hitomi-Scroll-Viewer/Hitomi-Scroll-Viewer.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <None Remove="ImageWatchingPage.xaml" />
     <None Remove="SearchPage.xaml" />
+    <None Remove="TagContainer.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -55,6 +56,11 @@
        package has not yet been restored -->
   <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnablePreviewMsixTooling)'=='true'">
     <ProjectCapability Include="Msix" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="TagContainer.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="ImageWatchingPage.xaml">
