--- a/Hitomi-Scroll-Viewer/Hitomi-Scroll-Viewer.csproj
+++ b/Hitomi-Scroll-Viewer/Hitomi-Scroll-Viewer.csproj
@@ -32,7 +32,8 @@
   <ItemGroup>
     <None Remove="ImageWatchingPage.xaml" />
     <None Remove="SearchPage.xaml" />
-    <None Remove="TagContainer.xaml" />
+    <None Remove="SearchPageComponent\TagListControlButton.xaml" />
+    <None Remove="SearchPageComponent\TagContainer.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -56,6 +57,11 @@
        package has not yet been restored -->
   <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnablePreviewMsixTooling)'=='true'">
     <ProjectCapability Include="Msix" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="SearchPage\TagListControlButton.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="TagContainer.xaml">
