--- a/Hitomi-Scroll-Viewer/Hitomi-Scroll-Viewer.csproj
+++ b/Hitomi-Scroll-Viewer/Hitomi-Scroll-Viewer.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <None Remove="ImageWatchingPage.xaml" />
     <None Remove="SearchPage.xaml" />
+    <None Remove="SearchPageComponent\BookmarkItem.xaml" />
     <None Remove="SearchPageComponent\TagListControlButton.xaml" />
     <None Remove="SearchPageComponent\TagContainer.xaml" />
   </ItemGroup>
@@ -48,7 +49,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230331000" />
-    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.0" />
+    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.1" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
@@ -57,6 +58,11 @@
        package has not yet been restored -->
   <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnablePreviewMsixTooling)'=='true'">
     <ProjectCapability Include="Msix" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="SearchPageComponent\BookmarkItem.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="SearchPage\TagListControlButton.xaml">
