--- a/Hitomi-Scroll-Viewer-Unit-Test/Hitomi-Scroll-Viewer-Unit-Test.csproj
+++ b/Hitomi-Scroll-Viewer-Unit-Test/Hitomi-Scroll-Viewer-Unit-Test.csproj
@@ -21,16 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Assets\SplashScreen.scale-200.png" />
-    <Content Include="Assets\LockScreenLogo.scale-200.png" />
-    <Content Include="Assets\Square150x150Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
-    <Content Include="Assets\StoreLogo.png" />
-    <Content Include="Assets\Wide310x150Logo.scale-200.png" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.240627000" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.5.0" />
@@ -51,6 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hitomi-Scroll-Viewer\Hitomi-Scroll-Viewer.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Assets\" />
+    <Folder Include="MainWindowComponent\SearchPageComponent\" />
   </ItemGroup>
 
   <!-- 
