--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 
+# ignore downloaded tag resources but include python scripts
+HitomiScrollViewerApp/TagResources/*
+!HitomiScrollViewerApp/TagResources/*.py
+
 # ignore test app
 HitomiScrollViewerTestApp/
 
