--- a/HitomiScrollViewerLib/HitomiScrollViewerLib.csproj
+++ b/HitomiScrollViewerLib/HitomiScrollViewerLib.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
     <TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
     <RootNamespace>HitomiScrollViewerLib</RootNamespace>
     <RuntimeIdentifiers Condition="$([MSBuild]::GetTargetFrameworkVersion('$(TargetFramework)')) &gt;= 8">win-x86;win-x64;win-arm64</RuntimeIdentifiers>
@@ -20,6 +20,7 @@
     <None Remove="Controls\SearchPageComponents\SyncContentDialog.xaml" />
     <None Remove="Controls\SearchPageComponents\SyncManager.xaml" />
     <None Remove="Controls\SearchPageComponents\TagFilterSetEditor.xaml" />
+    <None Remove="Controls\SearchPageComponents\TagTokenizingTextBox.xaml" />
     <None Remove="Controls\SearchPageComponents\TFSCheckBox.xaml" />
     <None Remove="Controls\SearchPageComponents\TFSSelector.xaml" />
     <None Remove="Controls\ViewPageComponents\GroupedImagePanel.xaml" />
@@ -27,8 +28,9 @@
   </ItemGroup>
 
   <ItemGroup>
-      <PackageReference Include="CommunityToolkit.WinUI.Controls.Primitives" Version="8.0.240109" />
-      <PackageReference Include="Google.Apis.Drive.v3" Version="1.68.0.3498" />
+      <PackageReference Include="CommunityToolkit.WinUI.Controls.Primitives" Version="8.1.240821" />
+      <PackageReference Include="CommunityToolkit.WinUI.Controls.TokenizingTextBox" Version="8.1.240821" />
+      <PackageReference Include="Google.Apis.Drive.v3" Version="1.68.0.3508" />
       <PackageReference Include="Google.Apis.Oauth2.v2" Version="1.68.0.1869" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
       <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.240802000" />
