--- a/HitomiScrollViewerLib/HitomiScrollViewerLib.csproj
+++ b/HitomiScrollViewerLib/HitomiScrollViewerLib.csproj
@@ -10,7 +10,13 @@
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Views\BrowsePageViews\CandidateSortItemView.xaml" />
+    <None Remove="Views\BrowsePageViews\SortDialogView.xaml" />
+    <None Remove="Views\BrowsePageViews\SortItemView.xaml" />
+  </ItemGroup>
+  <ItemGroup>
       <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+      <PackageReference Include="CommunityToolkit.WinUI.Collections" Version="8.1.240916" />
       <PackageReference Include="CommunityToolkit.WinUI.Controls.Primitives" Version="8.1.240916" />
       <PackageReference Include="CommunityToolkit.WinUI.Controls.SettingsControls" Version="8.1.240916" />
       <PackageReference Include="CommunityToolkit.WinUI.Controls.TokenizingTextBox" Version="8.1.240916" />
@@ -21,5 +27,20 @@
       <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1" />
       <PackageReference Include="MSFT.ParallelExtensionsExtras" Version="1.2.0" />
       <PackageReference Include="Soluling" Version="1.0.71" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Views\BrowsePageViews\SortDialogView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Views\BrowsePageViews\CandidateSortItemView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Views\BrowsePageViews\SortItemView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 </Project>
