--- a/HitomiScrollViewerLib/HitomiScrollViewerLib.csproj
+++ b/HitomiScrollViewerLib/HitomiScrollViewerLib.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0-windows10.0.26100.0</TargetFramework>
-	<WindowsSdkPackageVersion>10.0.26100.38</WindowsSdkPackageVersion>
+	<WindowsSdkPackageVersion>10.0.22621.38</WindowsSdkPackageVersion>
     <TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
     <RootNamespace>HitomiScrollViewerLib</RootNamespace>
     <RuntimeIdentifiers Condition="$([MSBuild]::GetTargetFrameworkVersion('$(TargetFramework)')) &gt;= 8">win-x86;win-x64;win-arm64</RuntimeIdentifiers>
@@ -11,7 +11,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Views\BrowsePageViews\CandidateSortItemView.xaml" />
-    <None Remove="Views\BrowsePageViews\SortDialogView.xaml" />
+    <None Remove="Views\BrowsePageViews\SortDialog.xaml" />
     <None Remove="Views\BrowsePageViews\SortItemView.xaml" />
   </ItemGroup>
   <ItemGroup>
@@ -24,12 +24,12 @@
       <PackageReference Include="Google.Apis.Oauth2.v2" Version="1.68.0.1869" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
       <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.240829007" />
-      <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1" />
+      <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
       <PackageReference Include="MSFT.ParallelExtensionsExtras" Version="1.2.0" />
       <PackageReference Include="Soluling" Version="1.0.71" />
   </ItemGroup>
   <ItemGroup>
-    <Page Update="Views\BrowsePageViews\SortDialogView.xaml">
+    <Page Update="Views\BrowsePageViews\SortDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
