--- a/HitomiScrollViewerLib/HitomiScrollViewerLib.csproj
+++ b/HitomiScrollViewerLib/HitomiScrollViewerLib.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0-windows10.0.26100.0</TargetFramework>
-	<WindowsSdkPackageVersion>10.0.22621.38</WindowsSdkPackageVersion>
     <TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
     <RootNamespace>HitomiScrollViewerLib</RootNamespace>
     <RuntimeIdentifiers Condition="$([MSBuild]::GetTargetFrameworkVersion('$(TargetFramework)')) &gt;= 8">win-x86;win-x64;win-arm64</RuntimeIdentifiers>
     <RuntimeIdentifiers Condition="$([MSBuild]::GetTargetFrameworkVersion('$(TargetFramework)')) &lt; 8">win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
     <UseWinUI>true</UseWinUI>
     <Platforms>AnyCPU;x64</Platforms>
+	<CsWinRTRcwFactoryFallbackGeneratorForceOptOut>true</CsWinRTRcwFactoryFallbackGeneratorForceOptOut>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Views\BrowsePageViews\CandidateSortItemView.xaml" />
@@ -23,10 +23,11 @@
       <PackageReference Include="Google.Apis.Drive.v3" Version="1.68.0.3533" />
       <PackageReference Include="Google.Apis.Oauth2.v2" Version="1.68.0.1869" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
-      <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.240829007" />
+      <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.240923002" />
       <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
       <PackageReference Include="MSFT.ParallelExtensionsExtras" Version="1.2.0" />
       <PackageReference Include="Soluling" Version="1.0.71" />
+      <PackageReference Include="System.Text.Json" Version="8.0.5" />
   </ItemGroup>
   <ItemGroup>
     <Page Update="Views\BrowsePageViews\SortDialog.xaml">
