--- a/HitomiScrollViewerApp/HitomiScrollViewerApp.csproj
+++ b/HitomiScrollViewerApp/HitomiScrollViewerApp.csproj
@@ -39,7 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.240923002" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.241114003" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
   <!-- Defining the "Msix" ProjectCapability here allows the Single-project MSIX Packaging
@@ -56,5 +56,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HitomiScrollViewerLib\HitomiScrollViewerLib.csproj" />
+    <!--<ProjectReference Include="..\LocalServerSample\LocalServerSample.csproj" />-->
   </ItemGroup>
 </Project>
