--- a/HitomiScrollViewerWebApp/Properties/launchSettings.json
+++ b/HitomiScrollViewerWebApp/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      //"launchBrowser": true,
-      //"applicationUrl": "http://localhost:5214",
+      "launchBrowser": true,
+      "externalUrlConfiguration": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
