--- a/HitomiScrollViewerWebApp/appsettings.json
+++ b/HitomiScrollViewerWebApp/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "https://localhost:5214"
+      }
+    }
+  }
 }
