--- a/HitomiScrollViewerWebApp/HitomiScrollViewerWebApp.csproj
+++ b/HitomiScrollViewerWebApp/HitomiScrollViewerWebApp.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.11.0" />
+    <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.11.0" />
+  </ItemGroup>
 </Project>
