--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,9 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 
-# ignore downloaded tag resources but include python scripts
-HitomiScrollViewerApp/DatabaseResources/*
-!HitomiScrollViewerApp/DatabaseResources/*.py
+# ignore downloaded tag text files (which are in the subfolders)
+**/DatabaseResources/*/
 
-# ignore test app
-HitomiScrollViewerTestApp/
-HitomiScrollViewerUnitTest/
-LocalServerSample/
 
 # ignore Credentials.resw
 Credentials.resw
