decided to go with webassembly instead of server

--- a/HitomiScrollViewerWebApp/HitomiScrollViewerWebApp.csproj
+++ b/HitomiScrollViewerWebApp/HitomiScrollViewerWebApp.csproj
@@ -1,39 +1,40 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
-
+<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="DatabaseResources\**\*.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+	<Content Include="DatabaseResources\**\*.txt">
+	  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	</Content>
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Localization" Version="9.0.0" />
+	<ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.11.0" />
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.11.0" />
   </ItemGroup>
-
   <ItemGroup>
+	<ProjectReference Include="..\ConsoleUtilities\ConsoleUtilities.csproj" />
 	<ProjectReference Include="..\HitomiScrollViewerData\HitomiScrollViewerData.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <Compile Update="Resources\ExampleTagFilterNames.Designer.cs">
+      <DependentUpon>ExampleTagFilterNames.resx</DependentUpon>
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>ExampleTagFilterNames.resx</DependentUpon>
     </Compile>
   </ItemGroup>
-
   <ItemGroup>
+    <EmbeddedResource Update="Resources\ExampleTagFilterNames.ko.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Update="Resources\ExampleTagFilterNames.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>ExampleTagFilterNames.Designer.cs</LastGenOutput>
+      <Generator>ResXFileCodeGenerator</Generator>
     </EmbeddedResource>
   </ItemGroup>
 </Project>
