--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
-db-initialized.txt
+# Database initialize flag
+db-init-flag.txt
 
 # ignore downloaded tag text files (which are in the subfolders)
 **/DatabaseResources/*/
