made basic API integration work with TagFilter

--- a/HitomiScrollViewerWebApp/HitomiScrollViewerWebApp.csproj
+++ b/HitomiScrollViewerWebApp/HitomiScrollViewerWebApp.csproj
@@ -30,4 +30,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
 </Project>
