now both web app and api uses appsettings.json to read their addresses

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 PrevWebApp
+MudBlazorAuthApp1
 
 # Database initialize flag
 db-init-flag.txt
