--- a/HitomiScrollViewerAPI/appsettings.Development.json
+++ b/HitomiScrollViewerAPI/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "applicationUrl": "https://localhost:7076",
+  "webAppUrl": "https://localhost:5214"
 }
