--- a/HitomiScrollViewerWebApp/wwwroot/appsettings.json
+++ b/HitomiScrollViewerWebApp/wwwroot/appsettings.json
@@ -8,9 +8,10 @@
   "AllowedHosts": "*",
   "Kestrel": {
     "Endpoints": {
-      "Http": {
-        "Url": "https://localhost:5214"
+      "Https": {
+        "Url": "https://localhost:5214/"
       }
     }
-  }
+  },
+  "apiUrl": "https://localhost:7076/"
 }
