many things done and more things to implement

--- a/HitomiScrollViewerAPI/appsettings.json
+++ b/HitomiScrollViewerAPI/appsettings.json
@@ -1,12 +1,19 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=main.db"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Kestrel": {
+    "EndPoints": {
+      "Https": {
+        "Url": "https://localhost:7076"
+      }
+    }
+  },
+  "AllowedHosts": "*",
+  "WebAppUrl": "https://localhost:5214",
+  "HitomiServerInfoDomain": "ltn.gold-usergeneratedcontent.net",
+  "HitomiMainDomain": "hitomi.la"
 }
