--- a/HitomiScrollViewerAPI/HitomiScrollViewerAPI.csproj
+++ b/HitomiScrollViewerAPI/HitomiScrollViewerAPI.csproj
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="images\" />
+    <Folder Include="Galleries\" />
   </ItemGroup>
 
 </Project>
