--- a/HitomiScrollViewerWebApp/wwwroot/appsettings.json
+++ b/HitomiScrollViewerWebApp/wwwroot/appsettings.json
@@ -13,5 +13,8 @@
       }
     }
   },
-  "ApiUrl": "https://localhost:7076/"
+  "ApiUrl": "https://localhost:7076/",
+  "DbInitializeHubPath": "api/db-initialize",
+  "DownloadHubPath": "api/download",
+  "ImageFilePath": "api/image"
 }
