im seeing some solid progress and that's good

--- a/HitomiScrollViewerWebApp/wwwroot/appsettings.json
+++ b/HitomiScrollViewerWebApp/wwwroot/appsettings.json
@@ -14,7 +14,15 @@
     }
   },
   "ApiUrl": "https://localhost:7076/",
-  "DbInitializeHubPath": "api/db-initialize",
-  "DownloadHubPath": "api/download",
-  "ImageFilePath": "api/image"
+  "SearchConfigPath": "api/search-config/",
+  "BrowseConfigPath": "api/browse-config/",
+  "DownloadConfigPath": "api/download-config/",
+  "LanguageTypePath": "api/language-type/",
+  "TagFilterPath": "api/tag-filter/",
+  "SearchFilterPath": "api/search-filter/",
+  "TagPath": "api/tag/",
+  "GalleryPath": "api/gallery/",
+  "DbInitializeHubPath": "api/db-initialize-hub/",
+  "DownloadHubPath": "api/download-hub/",
+  "ImageFilePath": "api/image/"
 }
